updated live column 2 position

--- a/Styles/experimental-electronic.css
+++ b/Styles/experimental-electronic.css
@@ -155,7 +155,7 @@
 	font-weight: lighter;
 	color: #999;
 	position: absolute;
-	bottom: 230px; 
+	top : 100px;
 	left: 469px;
 	width: 217px;
 	text-align: justify;
