added music button patch

--- a/Styles/experimental-electronic.css
+++ b/Styles/experimental-electronic.css
@@ -182,6 +182,13 @@
 	position: absolute;
 	top: 8px;
 }
+#container #music_background #music_button img {
+	position: absolute;
+	bottom: 678px;
+	left: 698px;
+	height: 24px;
+	width: 71px;
+}
 #container #software_background {
 	position: relative;
 	height: 900px;
