--- a/Styles/experimental-electronic.css
+++ b/Styles/experimental-electronic.css
@@ -174,7 +174,7 @@
 	height: 900px;
 	width: 935px;
 }
-#container #software_background #home_button img {
+#container #music_background #home_button a img {
 	position: absolute;
 	top: 8px;
 }
