--- a/Styles/experimental-electronic.css
+++ b/Styles/experimental-electronic.css
@@ -178,6 +178,14 @@
 	position: absolute;
 	top: 8px;
 }
+#container #music_background #blank_button img {
+	position: absolute;
+	bottom: 678px;
+	left: 696px;
+	height: 24px;
+	width: 71px;
+}
+
 #container #music_background #music_button img {
 	position: absolute;
 	bottom: 678px;
