--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,39 @@ html, body {
 }
 
 
+/* unvisited link */
+a:link {
+    color: yellow;
+}
+
+/* visited link */
+a:visited {
+    color: yellow;
+}
+
+/* mouse over link */
+a:hover {
+    color: yellow;
+}
+
+/* selected link */
+a:active {
+    color: yellow;
+}
+
+
 .home_background {
+	top: 0px;
+	min-height: 100%;
+	width: 100%;
+	background-image: url("../images/background_stars.jpg");
+	background-size: 200px 200px;
+	color: yellow;
+	text-align: center;
+}
+
+
+.about_background {
 	top: 0px;
 	min-height: 100%;
 	width: 100%;
@@ -21,6 +53,22 @@ html, body {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#about_float {
+	position: relative;
+	top: 50px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#about_text {
+	position: relative;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 400px;
 }
 
 
