--- a/css/styles.css
+++ b/css/styles.css
@@ -6,41 +6,26 @@ html, body {
 
 /* unvisited link */
 a:link {
-    /*color: yellow;*/
     color: black;
 }
 
 /* visited link */
 a:visited {
-    /*color: yellow;*/
     color: black;
 }
 
 /* mouse over link */
 a:hover {
-    */color: yellow;*/
     color: black;
 }
 
 /* selected link */
 a:active {
-    /*color: yellow;*/
     color: black;
 }
 
 
-.home_background {
-	top: 0px;
-	min-height: 100%;
-	width: 100%;
-	background-image: url("../images/background_stars.jpg");
-	background-size: 200px 200px;
-	color: yellow;
-	text-align: center;
-}
-
-
-.alt_home_background {
+#background {
 	top: 0px;
 	min-height: 100%;
 	width: 100%;
@@ -50,56 +35,25 @@ a:active {
 }
 
 
-.about_background {
-	top: 0px;
+#menu {
+	display: block;
+	position:static;
 	min-height: 100%;
 	width: 100%;
-	background-image: url("../images/background_stars.jpg");
 	background-size: 200px 200px;
-	color: yellow;
+	color: black;
 	text-align: center;
 }
 
 
-#home_float {
-	position: relative;
-	top: 20px;
+#body {
 	display: block;
+	width: 500px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-#about_float {
-	position: relative;
-	top: 50px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
 
-#about_text {
-	position: relative;
+#footer {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 400px;
-}
-
-
-#DMR_img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	/* height: 20%; */
-	/* width: 20%; */
-	height: 10%;
-	width: auto;
-}
-
-#DMR_glitter {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	height: 10%;
-	width: auto;
 }
